# matsuzawa-20260202-3

./: pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/workflows/: dev_compile_latex.yml  dev_compile_latex_with_claude_code.yml  dev_compile_latex_with_open_code.yml  dev_run_evaluation.yml  dev_run_evaluation_with_claude_code.yml  dev_run_evaluation_with_open_code.yml  dev_run_full_experiment.yml  dev_run_full_experiment_with_open_code.yml  dev_run_trial_experiment.yml  dev_run_trial_experiment_with_open_code.yml  run_full_experiment_with_claude_code_v2.yml
.research/: research_history.json
.research/latex/MDPI/: .chktexrc  main.tex
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-flan-t5-small-yelp.yaml  comparative-1-qwen3-4b-yelp.yaml  proposed-flan-t5-small-yelp.yaml  proposed-qwen3-4b-yelp.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
