[project]
name = "safe-refine"
version = "0.1.0"
description = "SAFE-Refine prompt optimization experiments"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3.2",
  "wandb>=0.16.6",
  "optuna>=3.6.1",
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "datasets>=2.18.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.66.0",
  "omegaconf>=2.3.0",
]

[tool.black]
line-length = 100
